# ecommerce-ai-assistant

./: .env.example  .gitignore  CLAUDE.md  COMPLETE_IMPROVEMENTS_V2.md  FEATURE_IMPROVEMENTS_V2.md  FINAL_SUMMARY.md  IMPROVEMENTS_V3.md  IMPROVEMENTS_V4.md  IMPROVEMENTS_V5.md  PROJECT_COMPLETE.md  PROJECT_IMPROVEMENTS.md  README.md  SPEC.md  components.d.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: release-exe.ps1  release-zip.ps1
src/: App.vue  env.d.ts  main.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: ChartRenderer.vue  CompareDialog.vue  MarkdownRenderer.vue  ReportGenerator.vue  StatsPanel.vue  TemplateList.vue  TemplateManager.vue
src/composables/: useDarkMode.ts  useKeyboard.ts
src/services/: analyzer.test.ts  analyzer.ts  dataSources.ts  fileImport.ts  llm.ts  logger.test.ts  logger.ts  publicData.ts  storage.ts
src/stores/: analysis.ts  batch.ts  chat.ts  settings.ts  templates.ts
src/styles/: main.css
src/utils/: charts.ts  dataProcessing.ts  helpers.test.ts  helpers.ts  markdown.ts  reportGenerator.ts
src/views/: BatchAnalysisView.vue  ChatView.vue  DataAnalysis.vue  HotWordsView.vue  ProductAnalysis.vue  TemplatesView.vue
